fixed overflow issue

--- a/public/vendors.css
+++ b/public/vendors.css
@@ -3006,7 +3006,8 @@ html {
 body {
   margin: 0 auto;
   width: 100%;
-  padding: 0; }
+  padding: 0;
+  overflow-x: hidden; }
 
 /**
  * Render the `main` element consistently in IE.
