--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -25,6 +25,7 @@ body {
   margin: 0 auto;
   width: 100%;
   padding: 0;
+  overflow-x: hidden;
 }
 
 /**
